get-sr-details
